Config rework (#312)
* new configuration implementation

* add config for taxonomies

* update tests

* replace serverproperties with new config

* replace serverproperties with new config

* add test package

* remove old config

* update demo project

* update test projects fix some bugs

* remove sysout

* fix build readd demo project

* fix build readd demo project

* fix cli

* remove legacy events

---------